# cookiecutter-poetry-example

./: 404.html  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/actions/run-checks/: action.yml
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: test_foo.py
